fix: remove contact link of Discord

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       <h2>Nossos Pilares</h2>
       <div class="pilar">
         <h3>Gamificação</h3>
-        <p>A plataforma se volta a ter em sua essência o espírito dos jogos!</p>
+        <p>A plataforma se volta a ter a essência dos jogos!</p>
       </div>
       <div class="pilar">
         <h3>Ousar</h3>
@@ -54,14 +54,11 @@
     </section>
     <section class="contato" id="contato">
       <h2>Contato</h2>
-      <p>Ainda estamos em desenvolvimento, mas você pode entrar em contato conosco, basta clickar:</p>
+      <p>Ainda estamos em desenvolvimento, mas você pode entrar em contato conosco, basta clicar:</p>
       <ul>
         <li>
           <a style="text-decoration: underline;" href="mailto:contato@sapere.com.br"><i class="fi fi-br-at"></i> Email</a>
         </li>
-        <li>
-          <a style="text-decoration: underline;" href="https://discord.com/invite/sapere"><i class="fi fi-brands-discord"></i> Discord</a>
-          </li>
       </ul>
     </section>
     <section class="pesquisa" id="pesquisa">
@@ -70,7 +67,7 @@
       
       <iframe id="" allowtransparency="true" allowfullscreen="true" allow="geolocation; microphone; camera" src="https://my.forms.app/form/65fb964144e8eef3c0109bd5" frameborder="0" style="width: 90vw; height:100vh; border: 2px solid #c1bebe;"></iframe>
       
-      <a href="https://my.forms.app/form/65fb964144e8eef3c0109bd5">Click aqui caso queira acessar o forms em outra página</a>
+      <a href="https://my.forms.app/form/65fb964144e8eef3c0109bd5">Clique aqui caso queira acessar o forms em outra página</a>
     </section>
   </main>
   
