feat: add README.md

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
       <p>Ainda estamos em desenvolvimento, mas você pode entrar em contato conosco, basta clicar:</p>
       <ul>
         <li>
-          <a style="text-decoration: underline;" href="mailto:contato@sapere.com.br"><i class="fi fi-br-at"></i> Email</a>
+          <a style="text-decoration: underline;" href="mailto:gustavojs417@gmail.com"><i class="fi fi-br-at"></i> Email</a>
         </li>
       </ul>
     </section>
