--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
       </ul>
     </section>
     <section class="pesquisa" id="pesquisa">
-      <h2>Nós ajude a construir!</h2>
+      <h2>Nos ajude a construir!</h2>
       <p>Responda nosso formulário de pesquisa e contribua para o desenvolvimento da plataforma:</p>
       
       <iframe id="" allowtransparency="true" allowfullscreen="true" allow="geolocation; microphone; camera" src="https://my.forms.app/form/65fb964144e8eef3c0109bd5" frameborder="0" style="width: 90vw; height:100vh; border: 2px solid #c1bebe;"></iframe>
